lesson2/css/small.css
main {
    display: grid;
    grid-template-columns: 1fr;

}

body {
    font-size: 12px;
    line-height: 1.4;
    font-family: 'Lato', sans-serif;
    margin: 0 auto;
    max-width: 960px;
}


header {
    background-color: teal;
    color: white;
    border-radius: 30px;
    text-align: center;
    height: auto;
    padding: 25px;
    font-size: 16px;

}

h1,
h2,
h3,
h4,
h5 {
    font-family: 'Yusei', cursive;
}

h1 {
    font-size: 2.1rem;

}



footer {
    border-radius: 30px 30px 0px 0px;
    background-color: teal;
    color: white;
    text-align: center;
    height: auto;
    padding: 15px;
    font-size: 16px;
    word-spacing: 7px;
}



header {
    padding: 1.4rem;
    margin-top: 5px;

}

section img {
    width: 100%;
    padding-top: 10px;
}

.container {

    background-color: rgb(209, 129, 9);
    border-radius: 15px 15px 0 0;
    text-align: center;
    padding: 2em;
    margin: 1em;
    background-size: 100%;
    height: 90%;
    width: auto;


}




div h2 {
    background-color: teal;
    color: white;
    padding: 10px;
    text-align: center;
    border-radius: 15px 15px 0 0;
    margin: 0 auto;

}


div p,
a,
h3 {
    margin: 10px;
    line-height: 1.5em;
}

